--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,27 @@
-version: '3'
-services:
-  web:
-    build: .
-    ports:
-      - "8000:80"
-    volumes:
-      - .:/var/www/html
-    depends_on:
-      - db
-  db:
-    image: mysql:5.7
-    environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: secret
-    volumes:
-      - db_data:/var/lib/mysql
-volumes:
-  db_data:
+version: '3.8'
+services: 
+    main:
+        build: 
+            context: .
+            dockerfile: Dockerfile
+        command: 'php artisan serve --host=0.0.0.0'
+        volumes:
+            - .:/app
+        ports:
+            - 8000:8000
+        depends_on: 
+            - db
+        tty: true     
+
+    db:
+        image: mysql:8.0
+        environment: 
+            MYSQL_DATABASE: laravel
+            MYSQL_USER: admin
+            MYSQL_ROOT: admin
+            MYSQL_PASSWORD: admin
+            MYSQL_ROOT_PASSWORD: root
+        volumes:
+            - ./storage/dbdata:/var/lib/mysql
+        ports:
+            - 3306:3306
